feat: Improve AI chat initialization and translation dependencies
Adds a new locale string for the AI conversation title and refactors the AI chat initialization to correctly handle translation dependencies. This ensures that the AI chat experience is consistent across different languages and that the component re-renders appropriately when translation functions change.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -54,11 +54,12 @@
   "languageSelectorLabel": "Language",
   "languageEnglish": "English",
   "languageChinese": "中文",
+  "aiConversationTitle": "AI Conversation about Responsible AI",
 
   "initialAnnaPrompt": "Hello! I'm Anna, an expert in Responsible AI. I'm here to discuss the 8 core principles that guide ethical AI development. Feel free to ask me about Fairness, Transparency, Accountability, Privacy, Robustness, Human-Centered, Sustainability, or Inclusiveness!",
   "systemInstruction": "You are an expert named Anna on Responsible AI principles. Your goal is to explain and discuss the 8 core principles (Fairness, Transparency, Accountability, Privacy, Robustness, Human-Centered, Sustainability, and Inclusiveness) based on the infographic provided on this website. You also have access to up-to-date information via Google Search to answer questions about recent events or current topics related to Responsible AI. Provide insightful, clear, and engaging answers. Crucially, keep your initial responses concise, around 1-2 sentences. After each response, explicitly ask the user if they would like more details or examples. When you mention a URL from your search, you MUST state the full URL, including 'https://' or 'http://' (e.g., 'https://www.example.com'), to help the user access the source.",
   "generateExamplesPrompt": "Provide 3-5 real-world, concise examples for the Responsible AI principle of {0} based on this description: '{1}'. Format them as a bulleted list in markdown.",
-  "initialDeepDiveAnnaPrompt": "Hello! I'm Anna, your guide for a deep dive into the Responsible AI principle of {0}. Ask me anything, and I'll provide comprehensive insights and examples. Crucially, keep your initial responses concise, around 1-2 sentences. After each response, explicitly ask the user if they would like more details or examples about {0}. Let's begin!",
+  "initialDeepDiveAnnaPrompt": "Hello! I'm Anna, your guide for a deep dive into the Responsible AI principle of {0}. Ask me anything, and I'll provide comprehensive insights and examples. Let's begin!",
   "deepDiveSystemInstruction": "You are Anna, an expert AI assistant specializing in the Responsible AI principle of {0}. Your goal is to provide in-depth explanations, examples, and answer complex questions related to {0}. Crucially, keep your initial responses concise, around 1-2 sentences. After each response, explicitly ask the user if they would like more details or examples about {0}. Use your advanced reasoning capabilities. Do not offer to search the web, focus purely on this principle.",
 
   "RESPONSIBLE_AI_PRINCIPLES": [
